@@ -1008,9 +1008,12 @@ static void do_init(fuse_req_t req, fuse_ino_t nodeid, const void *inarg)
 			f->conn.async_read = arg->flags & FUSE_ASYNC_READ;
 		if (arg->max_readahead < f->conn.max_readahead)
 			f->conn.max_readahead = arg->max_readahead;
+		if (f->conn.atomic_o_trunc)
+			f->conn.atomic_o_trunc = arg->flags & FUSE_ATOMIC_O_TRUNC;
 	} else {
 		f->conn.async_read = 0;
 		f->conn.max_readahead = 0;
+		f->conn.atomic_o_trunc = 0;
 	}
 
 	if (bufsize < FUSE_MIN_READ_BUFFER) {
@@ -1034,6 +1037,8 @@ static void do_init(fuse_req_t req, fuse_ino_t nodeid, const void *inarg)
 		outarg.flags |= FUSE_ASYNC_READ;
 	if (f->op.getlk && f->op.setlk)
 		outarg.flags |= FUSE_POSIX_LOCKS;
+	if (f->conn.atomic_o_trunc)
+		outarg.flags |= FUSE_ATOMIC_O_TRUNC;
 	outarg.max_readahead = f->conn.max_readahead;
 	outarg.max_write = f->conn.max_write;
 
@@ -1214,6 +1219,7 @@ static struct fuse_opt fuse_ll_opts[] = {
 	{ "max_readahead=%u", offsetof(struct fuse_ll, conn.max_readahead), 0 },
 	{ "async_read", offsetof(struct fuse_ll, conn.async_read), 1 },
 	{ "sync_read", offsetof(struct fuse_ll, conn.async_read), 0 },
+	{ "atomic_o_trunc", offsetof(struct fuse_ll, conn.atomic_o_trunc), 1},
 	FUSE_OPT_KEY("max_read=", FUSE_OPT_KEY_DISCARD),
 	FUSE_OPT_KEY("-h", KEY_HELP),
 	FUSE_OPT_KEY("--help", KEY_HELP),
@@ -1231,10 +1237,11 @@ static void fuse_ll_version(void)
 static void fuse_ll_help(void)
 {
 	fprintf(stderr,
-"    -o max_write=N	    set maximum size of write requests\n"
-"    -o max_readahead=N	    set maximum readahead\n"
-"    -o async_read	    perform reads asynchronously (default)\n"
-"    -o sync_read	    perform reads synchronously\n");
+"    -o max_write=N         set maximum size of write requests\n"
+"    -o max_readahead=N     set maximum readahead\n"
+"    -o async_read          perform reads asynchronously (default)\n"
+"    -o sync_read           perform reads synchronously\n"
+"    -o atomic_o_trunc      enable atomic open+truncate support\n");
 }
 
 static int fuse_ll_opt_proc(void *data, const char *arg, int key,
@@ -1306,6 +1313,7 @@ struct fuse_session *fuse_lowlevel_new_common(struct fuse_args *args,
 	f->conn.async_read = 1;
 	f->conn.max_write = UINT_MAX;
 	f->conn.max_readahead = UINT_MAX;
+	f->conn.atomic_o_trunc = 0;
 	list_init_req(&f->list);
 	list_init_req(&f->interrupts);
 	fuse_mutex_init(&f->lock);
